--- a/src/main/resources/templates/oferta/home.html
+++ b/src/main/resources/templates/oferta/home.html
@@ -1,40 +1,64 @@
 <html>
 <head th:replace="~{base :: head}">
 </head>
-<body>	
+<body onload="onload()">
 	<div th:replace="~{base :: logo}"></div>
 
-	<div class="container">
-		<div th:replace="~{base :: titulo('Últimos Pedidos')}"></div>
-		
-		<div class="card mb-3" th:each="pedido : ${pedidos}">
-			
-			<div class="card-header alert-dark" th:text="${pedido.nomeProduto}">nome do produto</div>
-			
+	<div class="container" id="ofertas">
+		<div th:replace="~{base :: titulo('Faça sua Oferta')}"></div>
+
+		<div class="card mb-3" v-for="pedido in pedidos">
+
+			<div class="card-header alert-dark">{{pedido.nomeProduto}}</div>
+
 			<div class="card-body">
 				<div class="row">
 					<div class="col-12 col-sm-8  mb-3">
 						<div class="row">
-							<div class="col-md-5">valor: <span th:if="${pedido.valorNegociado != null}" th:text="${'R$ ' + #numbers.formatDecimal(pedido.valorNegociado,3,'POINT',2,'COMMA')}">R$200,99</span></div>
-							<div class="col-md-7">Data da entrega: <span th:text="${#temporals.format(pedido.dataEntrega, 'dd/MM/yyyy')}">10/02/2020</span></div>		
+							<div class="col-md-5">
+								valor: <input />
+							</div>
+							<div class="col-md-7">
+								Data da entrega: <input />
+							</div>
 						</div>
-						
+
 						<div>Produto</div>
-						<div><input class="form-control" th:value="${pedido.urlProduto}" /></div>
-						
+						<div>
+							<a class="form-control" v-bind:href="pedido.urlProduto">{{pedido.nomeProduto}}</a>
+						</div>
+
 						<div>Descrição</div>
 						<div>
-							<textarea class="form-control" th:text="${pedido.descricao}">descrição do pedido</textarea>
+							<textarea class="form-control">{{pedido.descricao}}</textarea>
 						</div>
 					</div>
 					<div class="col-12 col-sm-4">
 						<div>
-							<img class="img-thumbnail" th:src="${pedido.urlImagem}" /> 
+							<img class="img-thumbnail" v-bind:src="pedido.urlImagem" />
 						</div>
-					</div>	
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
+	<script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+	<script>
+		function onload() {
+			var app = new Vue(
+			{
+				el : '#ofertas',
+				data : {
+					pedidos : []
+				},
+				mounted () {
+					axios
+						.get("http://localhost:8080/api/pedidos/aguardando")
+						.then(response => (this.pedidos = response.data))
+				}
+			});
+		}
+	</script>
 </body>
 </html>
