--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -18,7 +18,7 @@
 </head>
 
 <div th:fragment="logo">
-	<div class="row logo-container p-3 d-flex justify-content-between">
+	<div class="logo-container p-3 d-flex justify-content-between">
 		<span class="logo ml-2">mudi</span>
 		<span class="mt-3 mr-2">
 			<a href="/login"  sec:authorize="!isAuthenticated()" class="text-light">login </a>
@@ -26,7 +26,7 @@
 			<form id="form-login" th:action="@{/logout}" method="POST"></form>
 		</span>
 	</div>
-	<div class="row" sec:authorize="isAuthenticated()">
+	<div sec:authorize="isAuthenticated()">
 		<div class="col">
 			<nav class="nav">
 				<a class="nav-link active" th:href="@{/home}">Home</a>
