--- a/src/main/resources/templates/oferta/home.html
+++ b/src/main/resources/templates/oferta/home.html
@@ -8,30 +8,39 @@
 		<div th:replace="~{base :: titulo('Faça sua Oferta')}"></div>
 
 		<div class="card mb-3" v-for="pedido in pedidos">
-
-			<div class="card-header alert-dark">{{pedido.nomeProduto}}</div>
-
+			<div>
+				<h1>ID: {{pedido.id}}</h1>
+			</div>			
+			<div class="card-header alert-dark">{{pedido.nomeProduto}}</div>			
 			<div class="card-body">
 				<div class="row">
 					<div class="col-12 col-sm-8  mb-3">
-						<div class="row">
-							<div class="col-md-5">
-								valor: <input />
-							</div>
-							<div class="col-md-7">
-								Data da entrega: <input />
-							</div>
-						</div>
-
 						<div>Produto</div>
 						<div>
 							<a class="form-control" v-bind:href="pedido.urlProduto">{{pedido.nomeProduto}}</a>
 						</div>
-
-						<div>Descrição</div>
-						<div>
-							<textarea class="form-control">{{pedido.descricao}}</textarea>
+						
+						<div class="mt-3">
+							<label>Descrição</label>
+							<textarea disabled="disabled" class="form-control">{{pedido.descricao}}</textarea>
 						</div>
+						
+						<div class="mt-3">
+							<label>Comentário</label>
+							<textarea class="form-control" v-model="pedido.comentario"></textarea>
+						</div>
+						
+						<div class="row mt-3">
+							<div class="col-md-5">
+								valor: <input class="form-control" v-model="pedido.valorNegociado" />
+							</div>
+							<div class="col-md-7">
+								Data da entrega: <input class="form-control" v-model="pedido.dataEntrega" />
+							</div>
+						</div>
+						
+						<button v-if="pedido.ofertaEnviada" class="btn btn-success mt-2" v-on:click="enviarOferta(pedido)">Oferta enviada</button>
+						<button v-else class="btn btn-primary mt-2" v-on:click="enviarOferta(pedido)">Enviar Oferta</button>						
 					</div>
 					<div class="col-12 col-sm-4">
 						<div>
@@ -55,7 +64,22 @@
 				mounted () {
 					axios
 						.get("http://localhost:8080/api/pedidos/aguardando")
-						.then(response => (this.pedidos = response.data))
+						.then(response => {
+							response.data.forEach(pedido => pedido.ofertaEnviada = false)
+							this.pedidos = response.data
+						})
+				},
+				methods: {
+					enviarOferta: function (pedido) {
+						axios
+						.post("http://localhost:8080/api/ofertas", {
+							pedidoId: pedido.id,
+							valor: pedido.valorNegociado,
+							dataEntrega: pedido.dataEntrega,
+							comentario: pedido.comentario
+						})
+						.then(response => pedido.ofertaEnviada = true);
+					}
 				}
 			});
 		}
