--- a/src/main/resources/templates/oferta/home.html
+++ b/src/main/resources/templates/oferta/home.html
@@ -7,10 +7,7 @@
 	<div class="container" id="ofertas">
 		<div th:replace="~{base :: titulo('Faça sua Oferta')}"></div>
 
-		<div class="card mb-3" v-for="pedido in pedidos">
-			<div>
-				<h1>ID: {{pedido.id}}</h1>
-			</div>			
+		<div class="card mb-3" v-for="pedido in pedidos">			
 			<div class="card-header alert-dark">{{pedido.nomeProduto}}</div>			
 			<div class="card-body">
 				<div class="row">
@@ -32,10 +29,12 @@
 						
 						<div class="row mt-3">
 							<div class="col-md-5">
-								valor: <input class="form-control" v-model="pedido.valorNegociado" />
+								valor: <input v-bind:class="{'is-invalid':pedido.erros.valor !== ''}" class="form-control" v-model="pedido.valorNegociado" />
+								<div v-if="pedido.erros.valor" class="invalid-feedback">{{pedido.erros.valor}}</div>
 							</div>
 							<div class="col-md-7">
-								Data da entrega: <input class="form-control" v-model="pedido.dataEntrega" />
+								Data da entrega: <input v-bind:class="{'is-invalid':pedido.erros.dataEntrega !== ''}" class="form-control" v-model="pedido.dataEntrega" />
+								<div v-if="pedido.erros.dataEntrega" class="invalid-feedback">{{pedido.erros.dataEntrega}}</div>
 							</div>
 						</div>
 						
@@ -65,12 +64,24 @@
 					axios
 						.get("http://localhost:8080/api/pedidos/aguardando")
 						.then(response => {
-							response.data.forEach(pedido => pedido.ofertaEnviada = false)
+							response.data.forEach(pedido => {								
+								pedido.ofertaEnviada = false;
+								pedido.erros = {
+									valor: '',
+									dataEntrega: ''
+								}
+								
+							})
 							this.pedidos = response.data
 						})
 				},
 				methods: {
 					enviarOferta: function (pedido) {
+						pedido.erros = {
+							valor: '',
+							dataEntrega: ''
+						};
+						
 						axios
 						.post("http://localhost:8080/api/ofertas", {
 							pedidoId: pedido.id,
@@ -78,7 +89,17 @@
 							dataEntrega: pedido.dataEntrega,
 							comentario: pedido.comentario
 						})
-						.then(response => pedido.ofertaEnviada = true);
+						.then(response => pedido.ofertaEnviada = true)
+						.catch(error => {
+							var errors = error.response.data.errors;
+							console.log(errors);
+							
+							errors.forEach(e => {
+								console.log(e.field + "," + e.defaultMessage);
+								pedido.erros[e.field] =  e.defaultMessage;	
+							});
+						});
+						
 					}
 				}
 			});
